# Chip8Emulator

./: .clang-format  .clang-tidy  CMakeLists.txt  Chip8Emulator.cpp  Chip8Emulator.h  LICENSE  README.md  main.cpp
cmake/: CompilerWarnings.cmake
src/: CMakeLists.txt  Chip8Emulator.cpp  Chip8Emulator.h  RandomNumberGenerator.h  StaticStack.h  main.cpp
